<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.materialtabs.fragments.TwoFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtNomorSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/hintNomorTujuan"/>

    <EditText
        android:id="@+id/edtSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/hintIsiPesan"
        android:gravity="top"/>

    <Button
        android:id="@+id/btnKirim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btnSMS"/>

    <EditText
        android:id="@+id/edtNomorTelpon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/hintNomorTujuan"/>

    <Button
        android:id="@+id/btnTelpon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTelpon"
        android:layout_gravity="right"/>

    <EditText
        android:id="@+id/edtURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:hint="@string/hintURLPencarian"/>

    <Button
        android:id="@+id/btnBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBrowser"
        android:layout_gravity="right"/>
</LinearLayout>
