<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.materialtabs.fragments.ThreeFragment">


    <EditText
        android:id="@+id/edtJariJari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hintJariJari" />

    <Button
        android:id="@+id/btnCariLuas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtJariJari"
        android:text="@string/btnCariLuas"/>

    <Button
        android:id="@+id/btnCariVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtJariJari"
        android:text="@string/btnCariVolume"/>


</RelativeLayout>
